docs: add 2026-06-01 resume point to ONBOARDING
Records this session's work (Java 17 / Spark 3.5.1 dep bump, SessionStart
hook, spark-submit runbook, empty-password default), the 30-tests-green
state, the branch situation (work on task1-skeleton; main still empty;
base new sessions on task1-skeleton), and the open follow-ups.

https://claude.ai/code/session_01RNcPDmy6jwdvqESAcfzKpM